# cypto_mft

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  model_ideas.txt
configs/: default_config.yaml
scripts/: deploy.sh  run_backtest.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ExecutionEngine.hpp  Makefile  MarketDataEngine.cpp  MarketDataEngine.hpp  OrderBook.cpp  OrderBook.hpp  RiskEngine.hpp  StrategyEngine.hpp  TradingSystem.cpp  TradingSystem.hpp  core.cpp  core.hpp
src/exchanges/: BinanceAdapter.cpp  BinanceAdapter.hpp  CMakeLists.txt  CoinbaseAdapter.cpp  CoinbaseAdapter.hpp  ExchangeUtils.hpp  IExchangeAdapter.hpp  KrakenAdapter.cpp  KrakenAdapter.hpp  Makefile  exchanges.cpp  exchanges.hpp
src/infra/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  Logger.cpp  Logger.hpp  Makefile  MetricsReporter.hpp  config.yaml
src/models/: CMakeLists.txt  Makefile  ModelTrainer.hpp  PairSelector.hpp  SignalGenerator.cpp  SignalGenerator.hpp  models.cpp  models.hpp
src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MockExchangeAdapter.cpp  MockExchangeAdapter.hpp  cmake_install.cmake  config_manager_test.cpp  logger_test.cpp  mock_exchange_test.cpp
src/utils/: CMakeLists.txt  Makefile  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  order_book_pipeline_test.cpp
tests/unit/: CMakeLists.txt  MockExchangeAdapter.cpp  MockExchangeAdapter.hpp  coinbase_websocket_test.cpp  coinbase_ws_test.py  config_manager_test.cpp  logger_test.cpp  mock_exchange_test.cpp  orderbook_test.cpp  test_config.yaml
